# GeuReflector

./: .gitignore  Dockerfile  README.md  Reflector.cpp
docs/: DEPLOYMENT_ITALY.md  DEPLOYMENT_ITALY_IT.md  DESIGN_SATELLITE_AND_CLUSTER.md  INSTALL.md  JAY-additions.md  LOGGING.md  MCC_COUNTRY_CODES.md  MESSAGING_IDEAS.md  MQTT.md  PEER_PROTOCOL.md  REDIS.md  TRUNK_PROTOCOL.md  TWIN_PROTOCOL.md  WW_DEPLOYMENT.md
src/misc/: CMakeLists.txt  Log.cpp  Log.h
src/svxlink/reflector/: CMakeLists.txt  MqttPublisher.cpp  MqttPublisher.h  RedisAsyncAdapter.cpp  RedisAsyncAdapter.h  RedisLiveQueue.cpp  RedisLiveQueue.h  RedisStore.cpp  RedisStore.h  Reflector.cpp  Reflector.h  ReflectorClient.cpp  ReflectorClient.h  ReflectorMsg.h  ReflectorTrunkManager.cpp  ReflectorTrunkManager.h  SatelliteClient.cpp  SatelliteClient.h  SatelliteLink.cpp  SatelliteLink.h  TGHandler.cpp  TGHandler.h  TrunkLink.cpp  TrunkLink.h  TwinLink.cpp  TwinLink.h  ca-hook.py.in  svxreflector.conf.in  svxreflector.cpp
tests/: TESTS.md  generate_configs.py  generate_redis_configs.py  run_redis_tests.sh  run_tests.sh  test_logging.py  test_redis.py  test_satellite_secrets.py  test_trunk.py  test_twin.py  topology.py  topology_redis.py
